Transscription mit Timestamps, Metadaten und Tokens. [LIBARYS IN DOCKER NOCH UPDATEN]

--- a/requirements.txt
+++ b/requirements.txt
@@ -36,3 +36,7 @@ pyAudioDiarization
 
 Video für Hilfsbedürftige
     https://youtu.be/ABFqbY_rmEk?si=MrFezADsTYY3vzG2
+
+    Podcast download
+    https://github.com/lightpohl/podcast-dl
+    https://podcastindex.org/podcast/1383759
